Filesystem: Use KFileItem::name to get files name

KFileItem::text() returns human readable values.
To get name as file on disk name we need to use name().

BUG: 428850